css/civicrm.css
/* ... */
.Organization {background:url('../i/contact_org.gif') no-repeat;padding-left:20px;}

.individual h2 {
	background   : url("../i/contact_ind.gif") no-repeat 0 50%;
	padding-left : 20px;
}


.icon { 
	height:16px;
	width:16px;
	background:transparent url("../packages/jquery/themes/smoothness/images/ui-icons_888888_256x240.png") no-repeat top right;
	}

#crm-container a.button .icon { float:left; }

.button:hover {
	color:#333;
	}

.edit-icon { background-position: -66px -114px;}
	.button:hover .edit-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png"); }
		
.delete-icon { background-position: -179px -99px;}
	.button:hover .delete-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_cd0a0a_256x240.png");}

.dashboard-icon { background-position: -193px -130px; }
	.button:hover .dashboard-icon {background-image:url("../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png");}


#crm-container .geotag {
    padding: 2px 0 2px 20px !important;
    background: url('../i/geotag_16.png') left center no-repeat;
    font-size: .9em;
}


/* civicrm admin menu */

#civicrm-menu .ac_input {
	background:white url(../i/magnify.gif) no-repeat scroll right center;
	padding-right:16px; /* so that text doesn't flow on top of icon */
	}
#civicrm-menu #crm-qsearch {
    padding: 1px 3px 1px 2px;
    height: 20px;
	}

#civicrm-menu #crm-qsearch input {
    background-color:#ffffff;
    border: 1px solid black;
	}

#civicrm-menu #menu-logout {
    float: right;
    border-left: 1px solid #5D5D5D;
	}


/* fix autocomplete colors/styles */


.ac_even{ background-color:#F5F5F5; }
.ac_odd { background-color:#FAFAFA; }

.ac_over { 
	background-color:#999;
	color:white;
	}

.ac_results li strong {
	color: #000;
	font-weight: normal;
	}

/* Joomla Admin Menu alterations */

div.m ul#civicrm-menu {
    z-index: 0;
    position:relative;
    border: none;
    left:0px;
    height:0px;
    padding: 5px 0px 20px 2px;
    border-radius      : 4px;	
    -moz-border-radius : 4px;	
    -webkit-border-radius : 4px;	
    -khtml-border-radius : 4px;
	}

div.m ul#civicrm-menu {
    z-index: 1;
    position:relative;
    border: none;
    left:0px;
    height:0px;
    padding: 5px 0px 20px 2px;
    padding-bottom:20px !important; /*moz bottom */
    padding-bottom:2px; /*ie bottom */
    border-radius      : 4px;  
    -moz-border-radius : 4px;  
    -webkit-border-radius : 4px; 
    -khtml-border-radius : 4px;
	}


div#toolbar-box div.m{ 
 padding: 0px 8px !important;
}

div#toolbar-box, div#toolbar-box div.m{
  height: auto;
}

div.m ul#civicrm-menu li#crm-qsearch {
    height:0px;
	}



/* Pop-up help icon - eliminate forced line break */
div.helpicon {
	background  : transparent url(../i/quiz.png) no-repeat;
	display     : inline-block;
	cursor      : pointer;
	background-position:-48px -144px;
	background-image:url(../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png);
	background-color:#DDD;
	width:16px;
	height:16px;
	}

div.statusicon {
	background  : transparent url(../i/quiz.png) no-repeat;
	display     : inline-block;
	cursor      : pointer;
	background-position:-48px -144px;
	background-image:url(../packages/jquery/themes/smoothness/images/ui-icons_222222_256x240.png);
	background-color:#CCC;
	width:16px;
	height:16px;
	overflow:hidden;
	text-indent: -10000;
	}


div#toolTip {
	padding   : 10px;
	background: #FFFFFF url(../i/popupMenuBg.gif) repeat-x scroll left bottom;
	border    : 1px solid #999999;
	font-size : small;
	color     : black;
	text-align: left;
	margin    : 1em;
}

/* Class for tokens and helpicon */
.helpIcon {
  float       : right;
  padding     : 5px;
  position    : relative;
  z-index     : 1;
  margin-right: 45px;
}

/* "don't do this" icons */
#crm-container div.contact_panel span.email-hold, 
#crm-container div.contact_panel span.do-not-email, 
#crm-container div.contact_panel span.do-not-phone {
    background-position:3px; 
    background-repeat:no-repeat; 
    background-image:url("../i/stop-icon.png");
    padding-left: 24px;
	color: #ff6655 !important;
 	}
 
 
 
 /* specific, targeted fixes */
 #crm-container .dashboard-elements,
 #crm-container #membership-listings,
 #crm-container #premiums-listings,
 #crm-container #searchForm table {
  margin: 0em;
  width: 98%;	
  border-collapse: collapse;
  border: 0px none;
} 

/* This is the style for the trigger icon. The margin-bottom value causes the icon to shift down to center it. */
.ui-datepicker-trigger {
  margin-top: 4px;
  margin-bottom: -6px;
}

#activity-content table {width:100%!important;}	

.ui-state-default, 
.ui-widget-content .ui-state-default,
.ui-widget-content  {
	border:1px solid #CCC;
}	

#Tag .tree .collapsable .hit,
#Tag .tree .expandable .hit { padding-left:16px; }


/*  DataTables sorting */

.sorting_asc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -28px; }

.sorting_desc { background: url('../i/dataTable/sort_sprites.png') no-repeat right -60px; }

.sorting { background: url('../i/dataTable/sort_sprites.png') no-repeat right 4px; }

/*  DataTables fixes */

